--- a/mobilefirst/index.html
+++ b/mobilefirst/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query (Mobile First)</title>
+    <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="estilo/mediaquery.css">
 </head>
 <body>
+    <main>
+        <h1> Media Queries</h1>
+        <img src ="imagens/icon-phone.png" alt="Acessando via mobile" id="phone">
+        <img src="imagens/icon-tablet.png" alt="Acessando via Tablet" id="tablet">
+        <img src="imagens/icon-print.png" alt="Via Impressora" id="print">
+        <img src="imagens/icon-pc.png" alt=" Acessando via Desktop" id="pc">
+        <img src="imagens/icon-tv.png" alt="Acessando via TV" id="tv">
+    </main>
     
 </body>
 </html>
